--- a/index.html
+++ b/index.html
@@ -34,19 +34,35 @@
             </div>
             <div class="container">
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
+                  
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
             </div>
         </article>
@@ -56,19 +72,34 @@
             </div>
             <div class="container">
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
             </div>
         </article>
@@ -78,19 +109,33 @@
             </div>
             <div class="container">
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
+                <div class="item">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
                 <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
-                </div>
-                <div class="item">
-                    <img src="https://i.blogs.es/c62727/1_b7dnf-bqmn1d2saxtvq39a/450_1000.jpeg" alt="Poster">
+                    <video controls autoplay width="200" poster="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv">
+                        <source type="video/webm" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm">
+                        <source type="video/mp4" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4">
+                      </video>
                 </div>
             </div>
         </article>
